--- a/AppFinanzas/web/WEB-INF/web.xml
+++ b/AppFinanzas/web/WEB-INF/web.xml
@@ -4,13 +4,24 @@
         <servlet-name>Gastos</servlet-name>
         <servlet-class>co.com.finanzaspersonales.Gastos</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Presupuesto</servlet-name>
+        <servlet-class>co.com.finanzaspersonales.Presupuesto</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Gastos</servlet-name>
         <url-pattern>/Gastos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Presupuesto</servlet-name>
+        <url-pattern>/Presupuesto</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
