--- a/AppFinanzas/nbproject/project.properties
+++ b/AppFinanzas/nbproject/project.properties
@@ -43,7 +43,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc14.jar-1}:\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
