--- a/AppFinanzas/web/WEB-INF/web.xml
+++ b/AppFinanzas/web/WEB-INF/web.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <filter>
+        <filter-name>XSS</filter-name>        
+        <filter-class>co.com.finanzaspersonales.CrossScriptingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>XSS</filter-name> 
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>Gastos</servlet-name>
         <servlet-class>co.com.finanzaspersonales.Gastos</servlet-class>
@@ -23,7 +31,7 @@
     <servlet-mapping>
         <servlet-name>CuentasPorCobrar</servlet-name>
         <url-pattern>/CuentasPorCobrar</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>            
     <session-config>
         <session-timeout>
             30
